# qa_ai_agents

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
agents/: agent_file_system.py  agent_generate_test_ui.py  agent_post_test_on_jira.py  test_plan_agent.py  web_page_analyzer_agent.py
config/embedded_model_config/: embedding_models.py
config/mcp_config/: confluence_mcp.py  jira_mcp.py  mcp_config.py
data/: requirements.txt
deepeval_tests/: conftest.py
deepeval_tests/tests/: test_jira_agent.py
deepeval_tests/tests/.deepeval/: .deepeval_telemetry.txt
prompts/: requirements_prompts.py
utils/: chroma_setup.py  data_utils.py  load_env_settings.py  model_utils.py  path_utils.py  tools.py
utils/extract_msg/: ai_message.py
